<resources>
    <string name="app_name">Fair Play Digitron</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">x</string>
    <string name="div">/</string>
    <string name="root">\u221A</string>
    <string name="dot">.</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="neg">+/-</string>
    <string name="equals">=</string>
    <string name="about">Omladinski fudbalski klub FAIR PLAY Doboj</string>
    <string name="about1">Datum osnivanja: 07.07.2014. godine</string>
</resources>
